# GameBase

./: .gitignore  CMakeLists.txt  README.md
assets/: shader.fs
lib/glad/src/: glad.c
lib/glad/src/include/glad/: glad.h
platform/android/app/: build.gradle
platform/android/app/jni/SDL/: CMakeLists.txt
platform/android/app/jni/src/: CMakeLists.txt
platform/android/app/jni/src/glad/include/glad/: glad.h
platform/android/app/jni/src/glad/src/: glad.c
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: shader.fs  shader.vs
platform/android/app/src/main/res/values/: styles.xml
src/: main.cpp
src/game/: game.cpp  game.h
src/graphics/: mesh.cpp  mesh.h  render.cpp  shader.h  texture.cpp  texture.h
src/graphics/object/: object2d.cpp  object2d.h
src/graphics/scene/: scene2d.cpp  scene2d.h
src/graphics/utils/: mesh.cpp  mesh.h  render.cpp  render.h  texture.cpp  texture.h
src/myGame/: myGame.cpp  myGame.h
src/utils/: utils.cpp  utils.h
src/window/: window.cpp  window.h
